frontend/src/index.css
/* ... */
/* '' */
.icon-right-2:before {
  content: "";
}

/* '' */
.icon-target:before {
  content: "";
}

/* '' */
.icon-search:before {
  content: "";
}

/* '' */
.icon-directions:before {
  content: "";
}

/* '' */
.icon-copy:before {
  font-size: 22px;
  content: "";
}

/* '' */
.icon-star-half-alt:before {
  content: "";
}

/* '' */
.clearfix:after {
  content: "";
  display: block;
  clear: both;
}

.ellipsis {
  white-space: nowrap;
  /* 1 */
  text-overflow: ellipsis;
  /* 2 */
  overflow: hidden;
}

html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

* {
  max-height: 1000000px;
}

body {
  color: #000;
  background: #fff;
  font: 16px/1.2 "Inter", sans-serif;
  min-width: 320px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

img {
  max-width: 100%;
  height: auto;
}

.gm-style img {
  max-width: none;
}

h1, .h1,
h2, .h2,
h3, .h3,
h4, .h4,
h5, .h5,
h6, .h6,
.h {
  font-family: inherit;
  font-weight: bold;
  margin: 0 0 0.5em;
  color: inherit;
}

h1, .h1 {
  font-size: 30px;
}

h2, .h2 {
  font-size: 27px;
}

h3, .h3 {
  font-size: 24px;
}

h4, .h4 {
  font-size: 21px;
}

h5, .h5 {
  font-size: 17px;
}

h6, .h6 {
  font-size: 15px;
}

p {
  margin: 0 0 1em;
}

a {
  color: #083671;
}
a:hover, a:focus {
  text-decoration: none;
}

form,
fieldset {
  margin: 0;
  padding: 0;
  border-style: none;
}

input[type=text],
input[type=tel],
input[type=email],
input[type=search],
input[type=password],
textarea {
  border: 1px solid #ccc;
  padding: 0.4em 0.7em;
}
input[type=text]:focus,
input[type=tel]:focus,
input[type=email]:focus,
input[type=search]:focus,
input[type=password]:focus,
textarea:focus {
  border-color: #000;
}
input[type=text]::-webkit-input-placeholder,
input[type=tel]::-webkit-input-placeholder,
input[type=email]::-webkit-input-placeholder,
input[type=search]::-webkit-input-placeholder,
input[type=password]::-webkit-input-placeholder,
textarea::-webkit-input-placeholder {
  color: #797979;
}
input[type=text]::-moz-placeholder,
input[type=tel]::-moz-placeholder,
input[type=email]::-moz-placeholder,
input[type=search]::-moz-placeholder,
input[type=password]::-moz-placeholder,
textarea::-moz-placeholder {
  opacity: 1;
  color: #797979;
}
input[type=text]:-moz-placeholder,
input[type=tel]:-moz-placeholder,
input[type=email]:-moz-placeholder,
input[type=search]:-moz-placeholder,
input[type=password]:-moz-placeholder,
textarea:-moz-placeholder {
  color: #797979;
}
input[type=text]:-ms-input-placeholder,
input[type=tel]:-ms-input-placeholder,
input[type=email]:-ms-input-placeholder,
input[type=search]:-ms-input-placeholder,
input[type=password]:-ms-input-placeholder,
textarea:-ms-input-placeholder {
  color: #797979;
}
input[type=text].placeholder,
input[type=tel].placeholder,
input[type=email].placeholder,
input[type=search].placeholder,
input[type=password].placeholder,
textarea.placeholder {
  color: #797979;
}

select {
  -webkit-border-radius: 0;
}

textarea {
  resize: vertical;
  vertical-align: top;
}

button,
input[type=button],
input[type=reset],
input[type=file],
input[type=submit] {
  cursor: pointer;
}

#header {
  padding: 15px 0;
}
@media (min-width: 768px) {
  #header {
    padding: 20px 0;
  }
}
#header .sub-text, .site-link {
  display: block;
  font-size: 14px;
}
@media (min-width: 768px) {
  #header .sub-text, .site-link {
    display: inline;
    font-size: 18px;
  }
}
@media (min-width: 1300px) {
  #header .sub-text, .site-link {
     display: inline;
    font-size: 22px;
  }
}
#header .container {
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
}

#header .container a {
  text-decoration: none;
}

#header .logo {
  margin-right: 10px;
  margin-bottom: -1px;
}

#header .logo img{
  width: 45px;
}

@media (min-width: 768px) {
  #header .logo img{
    width: 60px;
    margin-bottom: 0;
  }

}
@media (min-width: 1300px) {
  #header .logo img{
    width: 75px;
    margin-bottom: 0;
  }
}

#wrapper {
  position: relative;
  width: 100%;
  overflow: hidden;
}

.container {
  max-width: 1550px;
  margin: 0 auto;
  padding: 0 20px;
}

#main {
  min-height: calc(100vh - 120px);
  background: linear-gradient(rgba(255,255,255,0.2), rgba(255,255,255,0.2)),  url(./images/bg.png) fixed;
  background-size: cover;
}

.content-block {
  padding: 30px 0 10px;
}

.form p {
  margin-bottom: 20px;
}
@media (min-width: 768px) {
  .form p {
    font-size: 20px;
    line-height: 24px;
  }
}
.form .input-holder {
  margin-bottom: 10px;
  max-width: 80%;
  position: relative;
}
@media (min-width: 768px) {
  .form .input-holder {
    max-width: 526px;
  }
}

.form .delete-btn-holder {
  margin-bottom: 15px;
  max-width: 80%;
  text-align: end;
}
@media (min-width: 768px) {
  .form .delete-btn-holder {
    max-width: 526px;
  }
}

.form .delete-btn-holder .btn-danger {
  border-radius: 30px;
  border: none;
  width: fit-content;
  padding: 5px 20px;
  color: #fff;
  background: red;
  font-size: 12px;
  line-height: 12px;
}
.form .delete-btn-holder .btn-danger:hover {
  background: darkred;
}

.form .input-holder .error {
  color: red;
  margin-left: 10px;
}

.form .search-icon {
  position: absolute;
  top: 19px;
  right: 18px;
  color: #797979;
  font-size: 20px;
}
.form .target-location {
  position: absolute;
  top: 13px;
  right: -55px;
  font-size: 33px;
  line-height: 35px;
}
.form .target-location button {
  text-decoration: none;
  color: #5A9AE4;
  background: none;
  border: none;
}

.form .target-location button:hover {
  color: #448de0;
}

.form .location-delete {
  position: absolute;
  top: 0;
  right: 0;
  font-size: 33px;
}
.form .location-delete button {
  text-decoration: none;
  background: white;
  border: none;
  height: 62px;
  color: #5A9AE4;
  width: 40px;
  -webkit-text-stroke: 2px white;
}

.form .location-delete button i {
  -webkit-text-stroke: 4px white;
}

.form .location-delete button:hover {
  color: #448de0;
}

.form p {
  margin-bottom: 20px;
}
/* ... */

